[workspace]
resolver = "2"
members = [
    "lib",
    "cli",
    "python",
    "js",
]

[workspace.package]
version = "0.1.5"
authors = ["Vincent Emonet <vincent.emonet@gmail.com>"]
edition = "2021"
repository = "https://github.com/vemonet/nanopub-rs"
homepage = "https://vemonet.github.io/nanopub-rs"
readme = "./README.md"
license-file = "LICENSE.txt"
keywords = ["nanopublications", "rdf", "linked-data", "semantic-web"]
categories = ["science", "encoding", "cryptography"]

[workspace.dependencies]
nanopub = { version = "0.1.5", path = "./lib" }

[profile.release]
lto = true
