[workspace]
resolver = "2"
members = [
    "lib",
    "cli",
    "python",
    "js",
]

[workspace.package]
version = "0.1.6"
authors = ["Vincent Emonet <vincent.emonet@gmail.com>"]
edition = "2021"
repository = "https://github.com/vemonet/nanopub-rs"
homepage = "https://vemonet.github.io/nanopub-rs"
readme = "./README.md"
license-file = "LICENSE.txt"
keywords = ["nanopublications", "rdf", "linked-data", "semantic-web"]
categories = ["science", "encoding", "cryptography"]

[workspace.dependencies]
nanopub = { version = "0.1.6", path = "./lib" }

[profile.release]
lto = true

# NOTE: not used yet because it creates changelog in each crate
# https://github.com/crate-ci/cargo-release/issues/925
[workspace.metadata.release]
shared-version = true
tag-prefix = "v"
tag-name = "v{{version}}"
sign-tag = false
push = true
publish = false  # Publishing lib to crates.io is done in gh workflow
consolidate-commits = true
pre-release-commit-message = "chore: Bump version to {{version}}"
