[package]
name = "nanopub-cli"
description = """
A cross-platform CLI tool written in Rust to sign Nanopublications.
"""
repository = "https://github.com/vemonet/nanopub-rs/tree/main/cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
nanopub = { version = "0.1.0", path = "../lib" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
