[package]
name = "nanopub-cli"
description = """
A cross-platform CLI tool written in Rust to sign Nanopublications.
"""
repository = "https://github.com/vemonet/nanopub-rs/tree/main/cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
nanopub = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
