[package]
name = "nanopub-js"
version = "0.0.3"
description = "JavaScript bindings for the Nanopub rust toolkit"
repository = "https://github.com/vemonet/nanopub-rs/tree/main/js"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nanopub = { version = "0.0.3", path = "../lib" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
