[package]
name = "nanopub-js"
description = "JavaScript bindings for the Nanopub rust toolkit"
repository = "https://github.com/vemonet/nanopub-rs/tree/main/js"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nanopub.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-derive = "0.3"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0" }
serde-wasm-bindgen = "0.6"

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
