[package]
name = "nanopub"
version = "0.0.0"
description = """
A cross-platform Rust library to sign Nanopublications, with bindings to Python and JS (wasm)
"""
repository = "https://github.com/vemonet/nanopub-rs/tree/main/lib"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true
# rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.21"
rsa = { version = "0.9", default-features = false, features = ["pem", "sha2"] }
openssl-probe = "0.1"
sophia = { git = "https://github.com/pchampin/sophia_rs.git", rev = "ec13628", features = ["jsonld"] }
# sophia = { version = "0.8.0-alpha.2", features = ["jsonld", "xml"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
# log = { version = "0.4.20", features = ["std"] }

[dev-dependencies]
mdbook = "0.4.35"
wasm-pack = "0.12.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.38"

# [[bench]]
# name = "store"
# harness = false
