[package]
name = "nanopub"
version = "0.0.18"
description = """
A cross-platform Rust library to sign Nanopublications, with bindings to Python and JS (wasm)
"""
repository = "https://github.com/vemonet/nanopub-rs/tree/main/lib"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true
# rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.21"
rsa = { version = "0.9.6", default-features = false, features = ["pem", "sha2"] }
openssl-probe = "0.1"
sophia = { version = "0.8.0", features = ["jsonld"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.31"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["std"] }
# rand = { version = "0.8", features = ["std_rng"], default-features = false }
# log = { version = "0.0.2", features = ["std"] }
# futures = "0.3"
# sophia = { version = "0.8.0-alpha.3", git = "https://github.com/pchampin/sophia_rs.git", rev = "ec13628", features = ["jsonld"] }

[dev-dependencies]
mdbook = "0.4.35"
wasm-pack = "0.12.1"
tokio = "1.34"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
# The JSON-LD parser uses futures::block_on which creates conflict when running in tokio runtime
