[package]
name = "nanopub-sign"
description = "Python bindings for the Nanopub rust toolkit"
repository = "https://github.com/vemonet/nanopub-rs/tree/main/python"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
name = "nanopub_sign"
crate-type = ["cdylib"]

[dependencies]
nanopub = { version = "0.1.0", path = "../lib" }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = "0.20"
tokio = { version = "1.34", features = ["rt-multi-thread"] }
pythonize = "0.20"
