[package]
name = "nanopub-sign"
description = "Python bindings for the Nanopub rust toolkit"
repository = "https://github.com/vemonet/nanopub-rs/tree/main/python"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
name = "nanopub_sign"
crate-type = ["cdylib"]

[dependencies]
nanopub.workspace = true
pyo3 = { version = "0.21", features = ["extension-module"] }
# pyo3-asyncio = "0.20"
pythonize = "0.21"
tokio = { version = "1.36", features = ["rt-multi-thread"] }
