[package]
name = "nanopub-sign"
description = "Python bindings for the Nanopub rust toolkit to sign, publish, and verify Nanopublications."
repository = "https://github.com/vemonet/nanopub-rs/tree/main/python"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file = "LICENSE.txt"
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
name = "nanopub_sign"
crate-type = ["cdylib"]

[dependencies]
nanopub.workspace = true
pyo3 = { version = "0.28", features = ["extension-module"] }
pythonize = "0.28"
tokio = { version = "1.36", features = ["rt-multi-thread"] }
# pyo3-asyncio = "0.20"
